--- a/src/component/style/Signup.css
+++ b/src/component/style/Signup.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .signup-box{
-    width: 50%; 
+    /* width: 50%;  */
     margin: auto;
     padding: 20px;
     text-align: center;
