--- a/src/component/style/Signup.css
+++ b/src/component/style/Signup.css
@@ -8,11 +8,30 @@
     margin: auto;
     padding: 20px;
     text-align: center;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
     border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-   margin-top: 3em;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);  
+    /* margin-top: 3em; */
+    z-index: 2;
 } 
+.signup-container{
+    background-image: url('../img/freedom.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+.close-btn{
+    background-color: white;
+    width: fit-content;
+    margin-left: auto;
+    padding: 5px;
+    border-radius: 7px;
+    cursor: pointer;
+}
+.exit-button{
+    cursor: pointer;
+}
 
 .signup-box input {
     width: 100%;
@@ -27,14 +46,6 @@
 }
 .signup-box input.error-input:focus {
     outline-color: red;
-}
-
-.signup-box p{
-    width: 300px; 
-    margin: 0 auto;
-    padding: 15px;
-    border-radius: 10px;
-  
 }
 .signup-box form div {
     margin-bottom: 15px;
