--- a/src/component/style/instruction.css
+++ b/src/component/style/instruction.css
@@ -6,7 +6,8 @@
 
 
 .instruction-btn{
-    padding: 20px 0;
+    margin: 15px 0;
+   
 }
 span{
     font-weight: bold;
@@ -26,15 +27,17 @@ span{
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.2);
-    margin-top: 3em;
+    margin-top: 12em;
+    justify-content: center;
 }
 .instruction-card h3{
     margin: 10px 0;
     text-transform: uppercase;
     font-family: 'Times New Roman', Times, serif;
 }
-.intruction p{
-    line-height: 1.5em ;
+.instruction-card p{
+    line-height: 2em ;
+    margin: 10px 0;
 }
 
 footer small{
