updata the voting component

--- a/src/component/style/voting.css
+++ b/src/component/style/voting.css
@@ -4,30 +4,49 @@
     box-sizing: border-box;
 }
 
-.img{
+.personalimg{
     width: 50px;
     height: 50px;
     border-radius: 50px;
 }
+.logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+}
 
 .personal-div{
+    width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    gap: 1em;
+    padding: 10px;
+    transition: border 0.3s ease;
+    margin: 1em;
    
+}
+.personal-div:hover {
+    border: 2px solid #007BFF; 
+    border-radius: 5px; 
+  }
+.party{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 .personal-text{
     padding: 10px;
 }
-/* .vote-box{
-   border: 2px solid black;
-   margin: 10px 0;
-    text-align: left;
-    padding: 1em 0;
-    border-radius: 10px;
-} */
+.vote{
+    display:  flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+}
 .personal-card{
-    width: 50%; 
+    width: 100%; 
    margin-left: auto;
    margin-right: auto;
     padding: 10px;
@@ -39,15 +58,22 @@
    
 }
 .name-text{
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
+    display: flex;
+    align-items: center;
 }
 .vote-btn{
     color: whitesmoke;
     display: flex;
     justify-content: space-around;
- 
     padding: 0.3em;
 
+}
+.btn{
+    font-size: x-large;
+}
+.personalimg{
+    display: block;
 }
 
 
@@ -56,3 +82,19 @@
    margin: 0 0  1em 0;
 
 }
+
+@media (max-width: 600px) {
+    .personal-card {
+      width: 90%; 
+      margin-top: 5em;
+    }
+    .personal-div {
+      flex-direction:flex;
+      gap: 1px;
+      padding: 5px;
+    }
+    .logo {
+      width: 10px;
+      height: 10px;
+    }
+  }
