--- a/src/component/style/home.css
+++ b/src/component/style/home.css
@@ -24,7 +24,6 @@ body{
     margin:0.5em;
     padding: 0 20px;
     width: 50%;
-    /* color: white; */
     text-align: center;
     align-content: center;
     height: 100%;
@@ -34,7 +33,6 @@ body{
    font-size: larger;
    font-weight: bold;
    color: midnightblue;
-   /* padding-bottom: 10px; */
    line-height: 6em;
 }
 .vote{
@@ -106,6 +104,7 @@ ul a{
     background-color: whitesmoke;
     margin: 0 2em;
     border-radius: 7px;
+    padding: 1em 0;
     
 }
 .sponsorship h2{
@@ -152,4 +151,10 @@ ul a{
     margin-right: auto;
 
 }
+.sponsorship-box img{
+     width: 80%;
+     height:70px ;
 }
+}
+
+
