--- a/src/component/style/Navigation.css
+++ b/src/component/style/Navigation.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 nav {
@@ -55,8 +56,17 @@ nav {
 .list-cont.open {
   display: flex;
 }
+.list-cont li:hover{
+  background-color: rgb(207, 41, 41);
+  border-radius: 7px;
+  color:white;
+  padding: 2px;
+}
 
 @media (max-width: 600px) {
+  nav ul .list-cont.open{
+    display: none;
+  }
   .list-cont { 
     display: none;
       flex-direction: column;
@@ -72,7 +82,10 @@ nav {
   }
   
   .list-cont.open {
-      display: flex; 
+      display: none; 
+  }
+  .list-cont li:hover{
+        background-color: whitesmoke;
   }
   
   .menu-icon {
