--- a/src/component/style/Navigation.css
+++ b/src/component/style/Navigation.css
@@ -85,7 +85,10 @@ nav {
       display: none; 
   }
   .list-cont li:hover{
-        background-color: whitesmoke;
+    background-color: rgb(207, 41, 41);
+    border-radius: 7px;
+    color:white;
+    padding: 2px;
   }
   
   .menu-icon {
